--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "lowdb": "^7.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
